fscMigration/force-app/main/default/objects/Account/fields/testfieldUncommon__c.field-meta.xml
<CustomField>
    <fullName>testfieldUncommon__c</fullName>
    <label>testfieldUncommon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>