fscMigration/force-app/main/default/objects/Account/fields/testsource__c.field-meta.xml
<CustomField>
    <fullName>testsource__c</fullName>
    <label>testsource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>